--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
+    "@clerk/nextjs": "^5.0.12",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
@@ -21,6 +22,7 @@
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
     "geist": "^1.3.0",
+    "install": "^0.13.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.6",
     "postgres": "^3.4.3",
