--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uploadthing/react": "^6.5.4",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
     "geist": "^1.3.0",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "uploadthing": "^6.10.4",
     "zod": "^3.23.3"
   },
   "devDependencies": {
